# 3dRendering

./: .gitignore  CMakeLists.txt  Makefile  README.md  cli.cpp  gui.cpp  report.md  tests.cpp  tests2.cpp
apps/3drendering/: controls.cpp  controls.hpp  main.cpp
apps/render_to_file/: main.cpp
include/: camera.hpp  interact_state.hpp  line_raster.hpp  mesh_loader.hpp  parallel.hpp  pipeline3d.hpp  projection.hpp  sketch_app.hpp  tinymath.hpp  transform.hpp  viewport.hpp
src/: camera.cpp  interact_state.cpp  line_raster.cpp  mesh_loader.cpp  pipeline3d.cpp  projection.cpp  sketch_app.cpp  transform.cpp  viewport.cpp
tests/: core_tests.cpp
